syntax = "proto3";

package broker;

option go_package = "github.com/TungE610/message-broker/broker/proto";

message BrokerRequest {
  string first_name = 1;
}

message SumRequest {
  uint32 first_number = 1;
  uint32 second_number = 3;
}

message BrokerResponse {
  string result = 1;
} 

message SumResponse {
    uint32 result = 1;
}

service BrokerService {
    rpc Greet(BrokerRequest) returns (BrokerResponse);
    rpc GreetManyTimes(BrokerRequest) returns (stream BrokerResponse);
    rpc LongGreet(stream BrokerRequest) returns (BrokerResponse);
}

service SumService {
    rpc Sum(SumRequest) returns (SumResponse);
}